{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 325,
  "lineage": "f9b4626e-5c79-3e9e-3616-fcdf2d1ab12b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jwshin_eip_ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0b074af2b812467",
            "domain": "vpc",
            "id": "eipalloc-0e0b074af2b812467",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-36-23-57.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.23.57",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jwshin_weba_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054c4ff0e3817628e",
            "associate_with_private_ip": "10.0.0.11",
            "association_id": "eipassoc-0c1c68df4453d5d98",
            "domain": "vpc",
            "id": "eipalloc-054c4ff0e3817628e",
            "instance": "i-066ba360e0f96df14",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0f00a278ba91de379",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-52-78-19-111.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.19.111",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.jwshin_weba",
            "aws_internet_gateway.jwshin_ig",
            "aws_security_group.jwshin_sg",
            "aws_subnet.jwshin_puba",
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jwshin_weba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e8dfc09b22389ad",
            "arn": "arn:aws:ec2:ap-northeast-2:816951526498:instance/i-066ba360e0f96df14",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066ba360e0f96df14",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f00a278ba91de379",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02026d6319c135d26",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4f4456925c2d83f",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-092ef78d3ab960728"
            ]
          },
          "dependencies": [
            "aws_security_group.jwshin_sg",
            "aws_subnet.jwshin_puba",
            "aws_vpc.jwshin_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jwshin_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:816951526498:internet-gateway/igw-0e7d332c1f9b7f280",
            "id": "igw-0e7d332c1f9b7f280",
            "owner_id": "816951526498",
            "tags": {
              "Name": "jwshin-ig"
            },
            "tags_all": {
              "Name": "jwshin-ig"
            },
            "vpc_id": "vpc-02f344a315b415216"
          },
          "dependencies": [
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jwshin_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:816951526498:loadbalancer/app/jwshin-alb/0f06ed70cfc98111",
            "arn_suffix": "app/jwshin-alb/0f06ed70cfc98111",
            "dns_name": "jwshin-alb-1082739345.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:816951526498:loadbalancer/app/jwshin-alb/0f06ed70cfc98111",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jwshin-alb",
            "security_groups": [
              "sg-092ef78d3ab960728"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e4f4456925c2d83f"
              },
              {
                "subnet_id": "subnet-0f8d9dbe71048f3ca"
              }
            ],
            "subnets": [
              "subnet-0e4f4456925c2d83f",
              "subnet-0f8d9dbe71048f3ca"
            ],
            "tags": {
              "Name": "jwshin-alb"
            },
            "tags_all": {
              "Name": "jwshin-alb"
            },
            "vpc_id": "vpc-02f344a315b415216",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.jwshin_sg",
            "aws_subnet.jwshin_puba",
            "aws_subnet.jwshin_pubc",
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jwshin_albli",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:816951526498:listener/app/jwshin-alb/0f06ed70cfc98111/f97828ef85eec7e0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:816951526498:targetgroup/jwshin-albtg/a555a624c6886cdd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:816951526498:listener/app/jwshin-alb/0f06ed70cfc98111/f97828ef85eec7e0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:816951526498:loadbalancer/app/jwshin-alb/0f06ed70cfc98111",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.jwshin_alb",
            "aws_lb_target_group.jwshin_albtg",
            "aws_security_group.jwshin_sg",
            "aws_subnet.jwshin_puba",
            "aws_subnet.jwshin_pubc",
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jwshin_albtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:816951526498:targetgroup/jwshin-albtg/a555a624c6886cdd",
            "arn_suffix": "targetgroup/jwshin-albtg/a555a624c6886cdd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/health.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:816951526498:targetgroup/jwshin-albtg/a555a624c6886cdd",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jwshin-albtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02f344a315b415216"
          },
          "dependencies": [
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jwshin_tgatt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:816951526498:targetgroup/jwshin-albtg/a555a624c6886cdd-20211114113047723400000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:816951526498:targetgroup/jwshin-albtg/a555a624c6886cdd",
            "target_id": "i-066ba360e0f96df14"
          },
          "dependencies": [
            "aws_instance.jwshin_weba",
            "aws_lb_target_group.jwshin_albtg",
            "aws_security_group.jwshin_sg",
            "aws_subnet.jwshin_puba",
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "jwshin_ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0b074af2b812467",
            "connectivity_type": "public",
            "id": "nat-0197057b47ab43622",
            "network_interface_id": "eni-0d145f7f84c9fdd31",
            "private_ip": "10.0.0.233",
            "public_ip": "3.36.23.57",
            "subnet_id": "subnet-0e4f4456925c2d83f",
            "tags": {
              "Name": "jwshin-ng"
            },
            "tags_all": {
              "Name": "jwshin-ng"
            }
          },
          "dependencies": [
            "aws_eip.jwshin_eip_ng",
            "aws_internet_gateway.jwshin_ig",
            "aws_subnet.jwshin_puba",
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jwshin_ngrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:816951526498:route-table/rtb-0e808b21b3679b4cc",
            "id": "rtb-0e808b21b3679b4cc",
            "owner_id": "816951526498",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0197057b47ab43622",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jwshin-ngrt"
            },
            "tags_all": {
              "Name": "jwshin-ngrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f344a315b415216"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.jwshin_eip_ng",
            "aws_internet_gateway.jwshin_ig",
            "aws_nat_gateway.jwshin_ng",
            "aws_subnet.jwshin_puba",
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jwshin_rf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:816951526498:route-table/rtb-07e3db961ff3ab9da",
            "id": "rtb-07e3db961ff3ab9da",
            "owner_id": "816951526498",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7d332c1f9b7f280",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jwshin-rt"
            },
            "tags_all": {
              "Name": "jwshin-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f344a315b415216"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jwshin_ig",
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jwshin_ngass_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea6eaad7c128523c",
            "route_table_id": "rtb-0e808b21b3679b4cc",
            "subnet_id": "subnet-0d14f94c9d6bf022d"
          },
          "dependencies": [
            "aws_eip.jwshin_eip_ng",
            "aws_internet_gateway.jwshin_ig",
            "aws_nat_gateway.jwshin_ng",
            "aws_route_table.jwshin_ngrt",
            "aws_subnet.jwshin_pria",
            "aws_subnet.jwshin_puba",
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jwshin_ngass_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f21107232d67653",
            "route_table_id": "rtb-0e808b21b3679b4cc",
            "subnet_id": "subnet-0d2128fa9907b75fd"
          },
          "dependencies": [
            "aws_eip.jwshin_eip_ng",
            "aws_internet_gateway.jwshin_ig",
            "aws_nat_gateway.jwshin_ng",
            "aws_route_table.jwshin_ngrt",
            "aws_subnet.jwshin_pric",
            "aws_subnet.jwshin_puba",
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jwshin_rtass_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b437ba94eaa24e1a",
            "route_table_id": "rtb-07e3db961ff3ab9da",
            "subnet_id": "subnet-0e4f4456925c2d83f"
          },
          "dependencies": [
            "aws_internet_gateway.jwshin_ig",
            "aws_route_table.jwshin_rf",
            "aws_subnet.jwshin_puba",
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jwshin_rtass_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ee80e7dbfe609db",
            "route_table_id": "rtb-07e3db961ff3ab9da",
            "subnet_id": "subnet-0f8d9dbe71048f3ca"
          },
          "dependencies": [
            "aws_internet_gateway.jwshin_ig",
            "aws_route_table.jwshin_rf",
            "aws_subnet.jwshin_pubc",
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jwshin_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:816951526498:security-group/sg-092ef78d3ab960728",
            "description": "Allow HTTP,SSH,SQL,ICMP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092ef78d3ab960728",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow Basic",
            "name_prefix": "",
            "owner_id": "816951526498",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02f344a315b415216"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jwshin_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jwshin_pria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:816951526498:subnet/subnet-0d14f94c9d6bf022d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d14f94c9d6bf022d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816951526498",
            "tags": {
              "Name": "jwshin-pria"
            },
            "tags_all": {
              "Name": "jwshin-pria"
            },
            "vpc_id": "vpc-02f344a315b415216"
          },
          "dependencies": [
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jwshin_pric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:816951526498:subnet/subnet-0d2128fa9907b75fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d2128fa9907b75fd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816951526498",
            "tags": {
              "Name": "jwshin-pric"
            },
            "tags_all": {
              "Name": "jwshin-pric"
            },
            "vpc_id": "vpc-02f344a315b415216"
          },
          "dependencies": [
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jwshin_pridba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:816951526498:subnet/subnet-0d99bc507fdf681e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0d99bc507fdf681e8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816951526498",
            "tags": {
              "Name": "jwshin-pridba"
            },
            "tags_all": {
              "Name": "jwshin-pridba"
            },
            "vpc_id": "vpc-02f344a315b415216"
          },
          "dependencies": [
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jwshin_pridbc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:816951526498:subnet/subnet-0660c0b6509d138a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0660c0b6509d138a5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816951526498",
            "tags": {
              "Name": "jwshin-pridbc"
            },
            "tags_all": {
              "Name": "jwshin-pridbc"
            },
            "vpc_id": "vpc-02f344a315b415216"
          },
          "dependencies": [
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jwshin_puba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:816951526498:subnet/subnet-0e4f4456925c2d83f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0e4f4456925c2d83f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816951526498",
            "tags": {
              "Name": "jwshin-puba"
            },
            "tags_all": {
              "Name": "jwshin-puba"
            },
            "vpc_id": "vpc-02f344a315b415216"
          },
          "dependencies": [
            "aws_vpc.jwshin_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jwshin_pubc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:816951526498:subnet/subnet-0f8d9dbe71048f3ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f8d9dbe71048f3ca",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816951526498",
            "tags": {
              "Name": "jwshin-pubc"
            },
            "tags_all": {
              "Name": "jwshin-pubc"
            },
            "vpc_id": "vpc-02f344a315b415216"
          },
          "dependencies": [
            "aws_vpc.jwshin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jwshin_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:816951526498:vpc/vpc-02f344a315b415216",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07827eb0cf24eab26",
            "default_route_table_id": "rtb-06481d3f85d47b08c",
            "default_security_group_id": "sg-0a9aa6104cbbf04ac",
            "dhcp_options_id": "dopt-b3105ed8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02f344a315b415216",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06481d3f85d47b08c",
            "owner_id": "816951526498",
            "tags": {
              "Name": "jwshin-vpc"
            },
            "tags_all": {
              "Name": "jwshin-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}